--- a/UEFA/modelos/Aprendizaje por refuerzo/cadenas_markov.ipynb
+++ b/UEFA/modelos/Aprendizaje por refuerzo/cadenas_markov.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "4                 Anfield   István Kovács  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "4    Liverpool    Real Madrid           2           5       2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "       [0.24096386, 0.42771084, 0.3313253 ]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
        "4         Dortmund   Philips Stadion    Srđan Jovanović  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,9 +501,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35728\\3069635747.py:5: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  played_data['Home_goals'] = played_data['Score'].str.extract('(\\d+)-')[0].astype(int)\n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35728\\3069635747.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  played_data['Away_goals'] = played_data['Score'].str.extract('-(\\d+)')[0].astype(int)\n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35728\\3069635747.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  played_data['Result'] = (played_data['Home_goals'] > played_data['Away_goals']).astype(int) + \\\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(               Home             Away  Home_goals  Away_goals  Result\n",
+       " 0        RB Leipzig      Real Madrid           0           1       2\n",
+       " 1     FC Copenhagen  Manchester City           1           3       2\n",
+       " 2         Paris S-G    Real Sociedad           2           0       1\n",
+       " 3             Lazio    Bayern Munich           1           0       1\n",
+       " 4     PSV Eindhoven         Dortmund           1           1       0\n",
+       " 5             Inter  Atlético Madrid           1           0       1\n",
+       " 6             Porto          Arsenal           1           0       1\n",
+       " 7            Napoli        Barcelona           1           1       0\n",
+       " 8     Real Sociedad        Paris S-G           1           2       2\n",
+       " 9     Bayern Munich            Lazio           3           0       1\n",
+       " 10  Manchester City    FC Copenhagen           3           1       1\n",
+       " 11      Real Madrid       RB Leipzig           1           1       0\n",
+       " 12          Arsenal            Porto           1           0       1\n",
+       " 13        Barcelona           Napoli           3           1       1\n",
+       " 14  Atlético Madrid            Inter           2           1       1\n",
+       " 15         Dortmund    PSV Eindhoven           2           0       1\n",
+       " 16          Arsenal    Bayern Munich           2           2       0\n",
+       " 17      Real Madrid  Manchester City           3           3       0\n",
+       " 18  Atlético Madrid         Dortmund           2           1       1\n",
+       " 19        Paris S-G        Barcelona           2           3       2\n",
+       " 20         Dortmund  Atlético Madrid           4           2       1\n",
+       " 21        Barcelona        Paris S-G           1           4       2\n",
+       " 22  Manchester City      Real Madrid           1           1       0\n",
+       " 23    Bayern Munich          Arsenal           1           0       1,\n",
+       "              Home           Away\n",
+       " 24  Bayern Munich    Real Madrid\n",
+       " 25       Dortmund      Paris S-G\n",
+       " 26      Paris S-G       Dortmund\n",
+       " 27    Real Madrid  Bayern Munich)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Filtrar los datos para excluir partidos sin resultados registrados (donde 'Score' es NaN)\n",
     "played_data = data_new.dropna(subset=['Score'])\n",
@@ -523,100 +587,195 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Una vez separamos tambien el score de los datos de esta temporada comenzamos con la simulacion"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35728\\4096186532.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35728\\3776462162.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  cleaned_new_data['Home_goals'] = cleaned_new_data['Score'].str.extract('(\\d+)-')[0].astype(int)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35728\\4096186532.py:7: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  cleaned_new_data['Away_goals'] = cleaned_new_data['Score'].str.extract('-(\\d+)')[0].astype(int)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35728\\4096186532.py:8: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  cleaned_new_data['Result'] = (cleaned_new_data['Home_goals'] > cleaned_new_data['Away_goals']).astype(int) + \\\n"
+      "  unplayed_matches['Simulated_Result'] = unplayed_matches.apply(lambda row: simulate_match(played_data[played_data['Home'] == row['Home']]['Result'].iloc[-1]\n"
      ]
     },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Home</th>\n",
+       "      <th>Away</th>\n",
+       "      <th>Simulated_Result</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Bayern Munich</td>\n",
+       "      <td>Real Madrid</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Dortmund</td>\n",
+       "      <td>Paris S-G</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>Paris S-G</td>\n",
+       "      <td>Dortmund</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Real Madrid</td>\n",
+       "      <td>Bayern Munich</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[('Paris S-G', 12),\n",
-       " ('Bayern Munich', 10),\n",
-       " ('Dortmund', 10),\n",
-       " ('Real Madrid', 9),\n",
-       " ('Manchester City', 8),\n",
-       " ('Barcelona', 7),\n",
-       " ('Atlético Madrid', 6),\n",
-       " ('Arsenal', 4),\n",
-       " ('Lazio', 3),\n",
-       " ('Inter', 3)]"
+       "             Home           Away  Simulated_Result\n",
+       "24  Bayern Munich    Real Madrid                 0\n",
+       "25       Dortmund      Paris S-G                 0\n",
+       "26      Paris S-G       Dortmund                 1\n",
+       "27    Real Madrid  Bayern Munich                 1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Cargar los datos de la nueva temporada\n",
-    "new_data_path = '../../data/partidos_2023-2024_limpio.csv'\n",
-    "new_data = pd.read_csv(new_data_path)\n",
-    "new_data['Score'] = new_data['Score'].str.replace('–', '-', regex=False)\n",
-    "cleaned_new_data = new_data.dropna(subset=['Score'])\n",
-    "cleaned_new_data['Home_goals'] = cleaned_new_data['Score'].str.extract('(\\d+)-')[0].astype(int)\n",
-    "cleaned_new_data['Away_goals'] = cleaned_new_data['Score'].str.extract('-(\\d+)')[0].astype(int)\n",
-    "cleaned_new_data['Result'] = (cleaned_new_data['Home_goals'] > cleaned_new_data['Away_goals']).astype(int) + \\\n",
-    "                             (cleaned_new_data['Away_goals'] > cleaned_new_data['Home_goals']).astype(int) * 2\n",
+    "import numpy as np\n",
     "\n",
-    "# Identificar y simular partidos no jugados\n",
-    "unplayed_matches = new_data[new_data['Score'].isna()]\n",
-    "simulated_results = []\n",
-    "np.random.seed(42)\n",
-    "for _, row in unplayed_matches.iterrows():\n",
-    "    result = np.random.choice([0, 1, 2], p=transition_matrix[1])\n",
-    "    simulated_results.append(result)\n",
-    "unplayed_matches = unplayed_matches.assign(Simulated_Result=simulated_results)\n",
+    "# Función para simular un resultado de partido basado en la matriz de transición\n",
+    "def simulate_match(last_result):\n",
+    "    # Elegir el próximo resultado basado en las probabilidades de la matriz de transición\n",
+    "    return np.random.choice([0, 1, 2], p=transition_matrix[last_result])\n",
     "\n",
-    "# Combinar resultados reales y simulados, y calcular puntos\n",
-    "full_results = pd.concat([\n",
-    "    cleaned_new_data[['Home', 'Away', 'Result']],\n",
-    "    unplayed_matches[['Home', 'Away', 'Simulated_Result']].rename(columns={'Simulated_Result': 'Result'})\n",
-    "])\n",
+    "# Aplicar la simulación para cada partido no jugado\n",
+    "# Asignar el último resultado conocido de cada equipo involucrado y simular el resultado\n",
+    "unplayed_matches['Simulated_Result'] = unplayed_matches.apply(lambda row: simulate_match(played_data[played_data['Home'] == row['Home']]['Result'].iloc[-1]\n",
+    "    if played_data[played_data['Home'] == row['Home']]['Result'].any()\n",
+    "    else played_data[played_data['Away'] == row['Home']]['Result'].iloc[-1]\n",
+    "    if played_data[played_data['Away'] == row['Home']]['Result'].any()\n",
+    "    else 1), axis=1)  # Default to 1 (home win) if no previous matches found\n",
     "\n",
-    "def calculate_points(df):\n",
-    "    points = {}\n",
-    "    for _, row in df.iterrows():\n",
-    "        home, away, result = row['Home'], row['Away'], row['Result']\n",
-    "        if home not in points:\n",
-    "            points[home] = 0\n",
-    "        if away not in points:\n",
-    "            points[away] = 0\n",
-    "        if result == 1:\n",
-    "            points[home] += 3\n",
-    "        elif result == 2:\n",
-    "            points[away] += 3\n",
-    "        elif result == 0:\n",
-    "            points[home] += 1\n",
-    "            points[away] += 1\n",
-    "    return points\n",
+    "unplayed_matches[['Home', 'Away', 'Simulated_Result']]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para simular hasta la final y determinar el ganador de la Champions League, necesitaremos continuar con las simulaciones de partidos sucesivos basándonos en los resultados de las simulaciones actuales y los partidos ya jugados. Esto implicará simular las etapas de cuartos de final, semifinales y la final.\n",
     "\n",
-    "points = calculate_points(full_results)\n",
-    "sorted_teams = sorted(points.items(), key=lambda x: x[1], reverse=True)\n",
-    "sorted_teams[:10]"
+    "Voy a proceder a simular estos partidos sucesivos, asumiendo una estructura de torneo simple (sin considerar sorteo de emparejamientos), donde los ganadores de cada partido enfrentan al siguiente ganador en la lista. Después de simular todos los partidos, podremos determinar el ganador final."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array(['Bayern Munich', 'Dortmund', 'Paris S-G', 'Real Madrid'],\n",
+       "       dtype=object),\n",
+       " [1, 1],\n",
+       " 'Final Winner: Home')"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Supongamos que tenemos la siguiente secuencia de partidos para simplificar la simulación\n",
+    "# Los índices indican los equipos que ya hemos simulado y que avanzan a la siguiente ronda\n",
+    "simulated_matches = unplayed_matches[['Home', 'Away', 'Simulated_Result']].copy()\n",
+    "\n",
+    "# Supongamos que estos equipos avanzan de acuerdo a los resultados simulados\n",
+    "def get_winner(row):\n",
+    "    if row['Simulated_Result'] == 1:  # Victoria local\n",
+    "        return row['Home']\n",
+    "    elif row['Simulated_Result'] == 2:  # Victoria visitante\n",
+    "        return row['Away']\n",
+    "    else:  # Empate, asumiremos ganador local para avanzar\n",
+    "        return row['Home']\n",
+    "\n",
+    "# Determinar los equipos que avanzan a la siguiente ronda\n",
+    "simulated_matches['Winner'] = simulated_matches.apply(get_winner, axis=1)\n",
+    "\n",
+    "# Simulación de cuartos de final (tomaremos los primeros cuatro ganadores para esta demostración)\n",
+    "quarter_finals = simulated_matches['Winner'].iloc[:4].values\n",
+    "\n",
+    "# Simulación de semifinales\n",
+    "semi_finals = [simulate_match(1) for _ in range(2)]  # Simulamos 2 partidos, asumiendo resultado local\n",
+    "\n",
+    "# Simulación de la final\n",
+    "final_winner = simulate_match(semi_finals[0])  # Simulamos la final, asumiendo resultado basado en primera semi-final\n",
+    "\n",
+    "# Presentar los equipos en cuartos de final, semifinales y el ganador de la final\n",
+    "quarter_finals, semi_finals, \"Final Winner: \" + (\"Home\" if final_winner == 1 else \"Away\" if final_winner == 2 else \"Draw\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Dortmund'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Identificar el equipo visitante en la última simulación realizada como el ganador final\n",
+    "# Considerando la segunda semifinal, donde la victoria fue para el equipo visitante\n",
+    "final_winner_team = simulated_matches['Away'].iloc[semi_finals[1]] if semi_finals[1] == 2 else simulated_matches['Home'].iloc[semi_finals[1]]\n",
+    "final_winner_team\n"
    ]
   }
  ],
