--- a/UEFA/modelos/Aprendizaje profundo/prueba_redes.ipynb
+++ b/UEFA/modelos/Aprendizaje profundo/prueba_redes.ipynb
@@ -7,12 +7,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "data=pd.read_csv('../data/partidos_limpio.csv')"
+    "data=pd.read_csv('../../data/partidos_limpio.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
