--- a/UEFA/modelos/Aprendizaje por refuerzo/cadenas_markov.ipynb
+++ b/UEFA/modelos/Aprendizaje por refuerzo/cadenas_markov.ipynb
@@ -16,9 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\albab\\anaconda3\\Lib\\site-packages\\pandas\\core\\arrays\\masked.py:60: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -132,7 +140,7 @@
        "4                 Anfield   István Kovács  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +267,7 @@
        "4    Liverpool    Real Madrid           2           5       2"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +322,7 @@
        "       [0.24096386, 0.42771084, 0.3313253 ]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +493,7 @@
        "4         Dortmund   Philips Stadion    Srđan Jovanović  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,26 +509,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35728\\3069635747.py:5: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_40580\\3069635747.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  played_data['Home_goals'] = played_data['Score'].str.extract('(\\d+)-')[0].astype(int)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35728\\3069635747.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_40580\\3069635747.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  played_data['Away_goals'] = played_data['Score'].str.extract('-(\\d+)')[0].astype(int)\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35728\\3069635747.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_40580\\3069635747.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -563,7 +571,7 @@
        " 27    Real Madrid  Bayern Munich)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,14 +603,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_35728\\3776462162.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_40580\\3776462162.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -641,7 +649,7 @@
        "      <th>24</th>\n",
        "      <td>Bayern Munich</td>\n",
        "      <td>Real Madrid</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
@@ -653,7 +661,7 @@
        "      <th>26</th>\n",
        "      <td>Paris S-G</td>\n",
        "      <td>Dortmund</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
@@ -667,13 +675,13 @@
       ],
       "text/plain": [
        "             Home           Away  Simulated_Result\n",
-       "24  Bayern Munich    Real Madrid                 0\n",
+       "24  Bayern Munich    Real Madrid                 1\n",
        "25       Dortmund      Paris S-G                 0\n",
-       "26      Paris S-G       Dortmund                 1\n",
+       "26      Paris S-G       Dortmund                 0\n",
        "27    Real Madrid  Bayern Munich                 1"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -716,11 +724,11 @@
       "text/plain": [
        "(array(['Bayern Munich', 'Dortmund', 'Paris S-G', 'Real Madrid'],\n",
        "       dtype=object),\n",
-       " [1, 1],\n",
+       " [0, 1],\n",
        " 'Final Winner: Home')"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +774,7 @@
        "'Dortmund'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
