--- a/UEFA/modelos/Aprendizaje profundo/DNN.ipynb
+++ b/UEFA/modelos/Aprendizaje profundo/DNN.ipynb
@@ -23,19 +23,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(['ac-milan', 'ajax', 'atalanta', 'atletico-madrid', 'barcelona'],\n",
+       "(['ac-milan',\n",
+       "  'ajax',\n",
+       "  'atalanta',\n",
+       "  'atletico-madrid',\n",
+       "  'barcelona',\n",
+       "  'bayern-munchen',\n",
+       "  'benfica',\n",
+       "  'besiktas',\n",
+       "  'chelsea',\n",
+       "  'club-brugge',\n",
+       "  'dynamo-kiyv',\n",
+       "  'fc-porto',\n",
+       "  'internazionale-milano',\n",
+       "  'juventus',\n",
+       "  'liverpool',\n",
+       "  'losc-lille',\n",
+       "  'malmo-ff',\n",
+       "  'manchester-city',\n",
+       "  'manchester-united',\n",
+       "  'paris-saint-germain-f-c',\n",
+       "  'rb-leipzig',\n",
+       "  'real-madrid',\n",
+       "  'redbull-salzburg',\n",
+       "  'sevilla',\n",
+       "  'shakhtar-donetsk',\n",
+       "  'sheriff-tiraspol',\n",
+       "  'sporting-cp',\n",
+       "  'villareal',\n",
+       "  'wolfsburg',\n",
+       "  'youngboys',\n",
+       "  'zenit'],\n",
        " (128, 128, 3))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
