--- a/UEFA/modelos/Aprendizaje profundo/CNN.ipynb
+++ b/UEFA/modelos/Aprendizaje profundo/CNN.ipynb
@@ -739,7 +739,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La prueba ha salido con éxito!!!!"
+    "#### 10. Guardamos el modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.models import load_model\n",
+    "# Guardar el modelo\n",
+    "model.save(\"modelo_cnn_entrenado.h5\")\n",
+    "\n",
+    "# Cargar el modelo\n",
+    "modelo_cargado = load_model(\"modelo_entrenado.h5\")\n"
    ]
   }
  ],
