--- a/UEFA/modelos/Aprendizaje profundo/DNN.ipynb
+++ b/UEFA/modelos/Aprendizaje profundo/DNN.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -17,107 +17,107 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "46/46 [==============================] - 1s 1ms/step - loss: 0.6955 - accuracy: 0.4728\n",
+      "46/46 [==============================] - 1s 1ms/step - loss: 0.6944 - accuracy: 0.4837\n",
       "Epoch 2/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.6689 - accuracy: 0.7168\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.6669 - accuracy: 0.6993\n",
       "Epoch 3/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.6204 - accuracy: 0.7669\n",
+      "46/46 [==============================] - 0s 990us/step - loss: 0.6146 - accuracy: 0.7211\n",
       "Epoch 4/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.5164 - accuracy: 0.7974\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.5037 - accuracy: 0.7996\n",
       "Epoch 5/50\n",
-      "46/46 [==============================] - 0s 947us/step - loss: 0.3963 - accuracy: 0.8322\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.3661 - accuracy: 0.8519\n",
       "Epoch 6/50\n",
-      "46/46 [==============================] - 0s 869us/step - loss: 0.2704 - accuracy: 0.9129\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.2325 - accuracy: 0.9085\n",
       "Epoch 7/50\n",
-      "46/46 [==============================] - 0s 840us/step - loss: 0.1690 - accuracy: 0.9630\n",
+      "46/46 [==============================] - 0s 898us/step - loss: 0.1301 - accuracy: 0.9739\n",
       "Epoch 8/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.1107 - accuracy: 0.9739\n",
+      "46/46 [==============================] - 0s 846us/step - loss: 0.0646 - accuracy: 0.9913\n",
       "Epoch 9/50\n",
-      "46/46 [==============================] - 0s 867us/step - loss: 0.0620 - accuracy: 0.9847\n",
+      "46/46 [==============================] - 0s 844us/step - loss: 0.0466 - accuracy: 0.9869\n",
       "Epoch 10/50\n",
-      "46/46 [==============================] - 0s 889us/step - loss: 0.0441 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 822us/step - loss: 0.0363 - accuracy: 0.9891\n",
       "Epoch 11/50\n",
-      "46/46 [==============================] - 0s 843us/step - loss: 0.0382 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 836us/step - loss: 0.0301 - accuracy: 0.9913\n",
       "Epoch 12/50\n",
-      "46/46 [==============================] - 0s 926us/step - loss: 0.0334 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 873us/step - loss: 0.0261 - accuracy: 0.9913\n",
       "Epoch 13/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0304 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 834us/step - loss: 0.0277 - accuracy: 0.9891\n",
       "Epoch 14/50\n",
-      "46/46 [==============================] - 0s 865us/step - loss: 0.0253 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 845us/step - loss: 0.0267 - accuracy: 0.9935\n",
       "Epoch 15/50\n",
-      "46/46 [==============================] - 0s 856us/step - loss: 0.0182 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 850us/step - loss: 0.0312 - accuracy: 0.9891\n",
       "Epoch 16/50\n",
-      "46/46 [==============================] - 0s 858us/step - loss: 0.0202 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 837us/step - loss: 0.0212 - accuracy: 0.9935\n",
       "Epoch 17/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0270 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 837us/step - loss: 0.0190 - accuracy: 0.9913\n",
       "Epoch 18/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0258 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 827us/step - loss: 0.0197 - accuracy: 0.9913\n",
       "Epoch 19/50\n",
-      "46/46 [==============================] - 0s 873us/step - loss: 0.0219 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 842us/step - loss: 0.0178 - accuracy: 0.9891\n",
       "Epoch 20/50\n",
-      "46/46 [==============================] - 0s 845us/step - loss: 0.0192 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 831us/step - loss: 0.0192 - accuracy: 0.9913\n",
       "Epoch 21/50\n",
-      "46/46 [==============================] - 0s 827us/step - loss: 0.0162 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 916us/step - loss: 0.0159 - accuracy: 0.9913\n",
       "Epoch 22/50\n",
-      "46/46 [==============================] - 0s 912us/step - loss: 0.0178 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 850us/step - loss: 0.0211 - accuracy: 0.9913\n",
       "Epoch 23/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0248 - accuracy: 0.9869\n",
+      "46/46 [==============================] - 0s 886us/step - loss: 0.0211 - accuracy: 0.9913\n",
       "Epoch 24/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0203 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 840us/step - loss: 0.0224 - accuracy: 0.9913\n",
       "Epoch 25/50\n",
-      "46/46 [==============================] - 0s 829us/step - loss: 0.0227 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 854us/step - loss: 0.0238 - accuracy: 0.9913\n",
       "Epoch 26/50\n",
-      "46/46 [==============================] - 0s 835us/step - loss: 0.0292 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 890us/step - loss: 0.0157 - accuracy: 0.9935\n",
       "Epoch 27/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0207 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 856us/step - loss: 0.0200 - accuracy: 0.9913\n",
       "Epoch 28/50\n",
-      "46/46 [==============================] - 0s 867us/step - loss: 0.0157 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 880us/step - loss: 0.0209 - accuracy: 0.9935\n",
       "Epoch 29/50\n",
-      "46/46 [==============================] - 0s 856us/step - loss: 0.0169 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 890us/step - loss: 0.0166 - accuracy: 0.9913\n",
       "Epoch 30/50\n",
-      "46/46 [==============================] - 0s 867us/step - loss: 0.0192 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 872us/step - loss: 0.0200 - accuracy: 0.9869\n",
       "Epoch 31/50\n",
-      "46/46 [==============================] - 0s 806us/step - loss: 0.0147 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 884us/step - loss: 0.0148 - accuracy: 0.9913\n",
       "Epoch 32/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0193 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 850us/step - loss: 0.0159 - accuracy: 0.9913\n",
       "Epoch 33/50\n",
-      "46/46 [==============================] - 0s 898us/step - loss: 0.0163 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 845us/step - loss: 0.0150 - accuracy: 0.9913\n",
       "Epoch 34/50\n",
-      "46/46 [==============================] - 0s 872us/step - loss: 0.0163 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 817us/step - loss: 0.0155 - accuracy: 0.9935\n",
       "Epoch 35/50\n",
-      "46/46 [==============================] - 0s 878us/step - loss: 0.0164 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 874us/step - loss: 0.0140 - accuracy: 0.9913\n",
       "Epoch 36/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0161 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 908us/step - loss: 0.0116 - accuracy: 0.9913\n",
       "Epoch 37/50\n",
-      "46/46 [==============================] - 0s 838us/step - loss: 0.0142 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0102 - accuracy: 0.9913\n",
       "Epoch 38/50\n",
-      "46/46 [==============================] - 0s 833us/step - loss: 0.0158 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 1ms/step - loss: 0.0126 - accuracy: 0.9891\n",
       "Epoch 39/50\n",
-      "46/46 [==============================] - 0s 867us/step - loss: 0.0166 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 997us/step - loss: 0.0142 - accuracy: 0.9913\n",
       "Epoch 40/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0162 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 884us/step - loss: 0.0132 - accuracy: 0.9913\n",
       "Epoch 41/50\n",
-      "46/46 [==============================] - 0s 953us/step - loss: 0.0173 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 918us/step - loss: 0.0142 - accuracy: 0.9891\n",
       "Epoch 42/50\n",
-      "46/46 [==============================] - 0s 839us/step - loss: 0.0135 - accuracy: 0.9869\n",
+      "46/46 [==============================] - 0s 823us/step - loss: 0.0132 - accuracy: 0.9913\n",
       "Epoch 43/50\n",
-      "46/46 [==============================] - 0s 823us/step - loss: 0.0146 - accuracy: 0.9935\n",
+      "46/46 [==============================] - 0s 844us/step - loss: 0.0129 - accuracy: 0.9869\n",
       "Epoch 44/50\n",
-      "46/46 [==============================] - 0s 824us/step - loss: 0.0159 - accuracy: 0.9869\n",
+      "46/46 [==============================] - 0s 904us/step - loss: 0.0142 - accuracy: 0.9913\n",
       "Epoch 45/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0142 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 885us/step - loss: 0.0141 - accuracy: 0.9913\n",
       "Epoch 46/50\n",
-      "46/46 [==============================] - 0s 913us/step - loss: 0.0136 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 808us/step - loss: 0.0128 - accuracy: 0.9913\n",
       "Epoch 47/50\n",
-      "46/46 [==============================] - 0s 840us/step - loss: 0.0165 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 846us/step - loss: 0.0124 - accuracy: 0.9913\n",
       "Epoch 48/50\n",
-      "46/46 [==============================] - 0s 856us/step - loss: 0.0122 - accuracy: 0.9913\n",
+      "46/46 [==============================] - 0s 855us/step - loss: 0.0106 - accuracy: 0.9891\n",
       "Epoch 49/50\n",
-      "46/46 [==============================] - 0s 2ms/step - loss: 0.0168 - accuracy: 0.9891\n",
+      "46/46 [==============================] - 0s 911us/step - loss: 0.0145 - accuracy: 0.9891\n",
       "Epoch 50/50\n",
-      "46/46 [==============================] - 0s 1ms/step - loss: 0.0160 - accuracy: 0.9913\n",
-      "4/4 [==============================] - 0s 2ms/step - loss: 2.2604 - accuracy: 0.5478\n",
-      "Precisión en el conjunto de prueba: 0.5478261113166809\n"
+      "46/46 [==============================] - 0s 881us/step - loss: 0.0132 - accuracy: 0.9913\n",
+      "4/4 [==============================] - 0s 2ms/step - loss: 2.5876 - accuracy: 0.5826\n",
+      "Precisión en el conjunto de prueba: 0.582608699798584\n"
      ]
     }
    ],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "4         Dortmund   Philips Stadion    Srđan Jovanović  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "27  Bayern Munich  Estadio Santiago Bernabéu     NaN  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,15 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:5 out of the last 11 calls to <function Model.make_predict_function.<locals>.predict_function at 0x0000017B7E306340> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n",
-      "1/1 [==============================] - 0s 99ms/step\n",
+      "1/1 [==============================] - 0s 41ms/step\n",
       "             Home           Away Predicted Winner\n",
       "24  Bayern Munich    Real Madrid        Away Wins\n",
       "25       Dortmund      Paris S-G        Home Wins\n",
@@ -440,19 +439,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_22988\\2519762111.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_10592\\2519762111.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  features_upcoming['Referee'] = 'Unknown'\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_22988\\2519762111.py:16: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_10592\\2519762111.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  upcoming_matches['Predicted Winner'] = predicted_winners\n",
-      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_22988\\2519762111.py:17: SettingWithCopyWarning: \n",
+      "C:\\Users\\albab\\AppData\\Local\\Temp\\ipykernel_10592\\2519762111.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -486,15 +485,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "Predicted Final Winner:   Bayern Munich\n"
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "Predicted Final Winner:   Real Madrid\n"
      ]
     }
    ],
@@ -502,7 +501,7 @@
     "# Configurar los datos del partido final\n",
     "final_match = pd.DataFrame({\n",
     "    'Home': ['Paris S-G'],\n",
-    "    'Away': ['Bayern Munich'],\n",
+    "    'Away': ['Real Madrid'],\n",
     "    'Referee': ['Unknown']  # Asumiendo que no conocemos el árbitro\n",
     "})\n",
     "\n",
@@ -515,7 +514,7 @@
     "\n",
     "# Interpretar la predicción\n",
     "final_winner = 'Home Wins' if predicted_final_winner else 'Away Wins'\n",
-    "print(\"Predicted Final Winner: \", 'Paris S-G' if final_winner == 'Home Wins' else ' Bayern Munich')\n"
+    "print(\"Predicted Final Winner: \", 'Paris S-G' if final_winner == 'Home Wins' else ' Real Madrid')\n"
    ]
   }
  ],
