hemos conseguido crear con exito un main que funciona, solo falta ajustarlo a todo

--- a/UEFA/modelos/Aprendizaje por refuerzo/cadenas_markov.ipynb
+++ b/UEFA/modelos/Aprendizaje por refuerzo/cadenas_markov.ipynb
@@ -149,7 +149,7 @@
     "import pandas as pd\n",
     "\n",
     "# Cargar el archivo CSV para revisar su contenido\n",
-    "data_path = '../../data/partidos_limpio.csv'\n",
+    "data_path = '../data/partidos_limpio.csv'\n",
     "data = pd.read_csv(data_path)\n",
     "\n",
     "# Mostrar las primeras filas del dataframe\n",
@@ -500,7 +500,7 @@
    ],
    "source": [
     "# Cargar el archivo CSV de la temporada 2023-2024 para revisar su contenido\n",
-    "data_path_new = '../../data/partidos_2023-2024_limpio.csv'\n",
+    "data_path_new = '../data/partidos_2023-2024_limpio.csv'\n",
     "data_new = pd.read_csv(data_path_new)\n",
     "\n",
     "# Mostrar las primeras filas del nuevo dataframe limpio\n",
@@ -795,6 +795,13 @@
     "# Considerando la segunda semifinal, donde la victoria fue para el equipo visitante\n",
     "final_winner_team = simulated_matches['Away'].iloc[semi_finals[1]] if semi_finals[1] == 2 else simulated_matches['Home'].iloc[semi_finals[1]]\n",
     "final_winner_team\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El ganador segun el modelo de Cadenas de Markov es 'Bayern Munich'"
    ]
   }
  ],
