--- a/UEFA/modelos/Aprendizaje no supervisado/series_temporales.ipynb
+++ b/UEFA/modelos/Aprendizaje no supervisado/series_temporales.ipynb
@@ -28,8 +28,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Cargar los datos\n",
-    "data_path_1 = '../../data/partidos_limpio.csv'\n",
-    "data_path_2 = '../../data/partidos_2023-2024_limpio.csv'\n",
+    "data_path_1 = '../data/partidos_limpio.csv'\n",
+    "data_path_2 = '../data/partidos_2023-2024_limpio.csv'\n",
     "data_1 = pd.read_csv(data_path_1)\n",
     "data_2 = pd.read_csv(data_path_2)\n",
     "\n",
