--- a/UEFA/modelos/Aprendizaje profundo/CNN.ipynb
+++ b/UEFA/modelos/Aprendizaje profundo/CNN.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "os.listdir('../../images')"
+    "os.listdir('../images')"
    ]
   },
   {
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logo_directory_path = os.path.join('../../images')\n",
+    "logo_directory_path = os.path.join('../images')\n",
     "logo_files = os.listdir(logo_directory_path)"
    ]
   },
@@ -172,7 +172,7 @@
     "    return valid_images\n",
     "\n",
     "# Ejemplo de uso\n",
-    "logo_directory_path = \"../../images\"\n",
+    "logo_directory_path = \"../images\"\n",
     "valid_image_files = prepare_image_dataset(logo_directory_path)\n",
     "print(valid_image_files[:10])  # Muestra los primeros 10 archivos de imagen válidos\n",
     "\n"
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "data_images = tf.keras.utils.image_dataset_from_directory('../../images')"
+    "data_images = tf.keras.utils.image_dataset_from_directory('../images')"
    ]
   },
   {
@@ -343,7 +343,7 @@
    ],
    "source": [
     "# Definimos la ruta a los datos\n",
-    "data_directory = '../../images'\n",
+    "data_directory = '../images'\n",
     "\n",
     "# Configuramos el aumento de datos utilizando la API de preprocesamiento de Keras\n",
     "data_augmentation = tf.keras.Sequential([\n",
@@ -664,7 +664,7 @@
     "\n",
     "# Función para mostrar las opciones disponibles en la carpeta imagenes_prueba\n",
     "def mostrar_opciones_imagenes():\n",
-    "    ruta_carpeta = \"../../imagenes_prueba\"\n",
+    "    ruta_carpeta = \"../imagenes_prueba\"\n",
     "    imagenes_disponibles = os.listdir(ruta_carpeta)\n",
     "\n",
     "    print(\"Imágenes disponibles en la carpeta imagenes_prueba:\")\n",
@@ -679,7 +679,7 @@
     "\n",
     "    if opcion_imagen.isdigit() and 1 <= int(opcion_imagen) <= len(imagenes_disponibles):\n",
     "        nombre_imagen = imagenes_disponibles[int(opcion_imagen) - 1]\n",
-    "        ruta_imagen = os.path.join(\"../../imagenes_prueba\", nombre_imagen)\n",
+    "        ruta_imagen = os.path.join(\"../imagenes_prueba\", nombre_imagen)\n",
     "        return ruta_imagen\n",
     "    else:\n",
     "        print(\"Opción inválida.\")\n",
