--- a/UEFA/modelos/Aprendizaje profundo/DNN.ipynb
+++ b/UEFA/modelos/Aprendizaje profundo/DNN.ipynb
@@ -131,7 +131,7 @@
     "from tensorflow.keras.layers import Dense\n",
     "\n",
     "# Carga los datos\n",
-    "data = pd.read_csv('../../data/partidos_limpio.csv')\n",
+    "data = pd.read_csv('../data/partidos_limpio.csv')\n",
     "\n",
     "# Preparar las etiquetas binarias para los resultados de los partidos\n",
     "data['Winner'] = (data['Score'].apply(lambda x: int(x.split('-')[0]) > int(x.split('-')[1]))).astype(int)\n",
@@ -296,7 +296,7 @@
    ],
    "source": [
     "# Cargar y revisar el contenido del archivo actualizado para la temporada 2023-2024\n",
-    "updated_data_path = '../../data/partidos_2023-2024_limpio.csv'\n",
+    "updated_data_path = '../data/partidos_2023-2024_limpio.csv'\n",
     "updated_data = pd.read_csv(updated_data_path)\n",
     "updated_data.head()"
    ]
