--- a/UEFA/modelos/Aprendizaje profundo/TL.ipynb
+++ b/UEFA/modelos/Aprendizaje profundo/TL.ipynb
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "os.listdir('../../images')"
+    "os.listdir('../images')"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logo_directory_path = os.path.join('../../images')\n",
+    "logo_directory_path = os.path.join('../images')\n",
     "logo_files = os.listdir(logo_directory_path)"
    ]
   },
@@ -147,7 +147,7 @@
     "    return valid_images\n",
     "\n",
     "# Ejemplo de uso\n",
-    "logo_directory_path = \"../../images\"\n",
+    "logo_directory_path = \"../images\"\n",
     "valid_image_files = prepare_image_dataset(logo_directory_path)\n",
     "print(valid_image_files[:10])  # Muestra los primeros 10 archivos de imagen válidos\n",
     "\n"
@@ -184,7 +184,7 @@
     }
    ],
    "source": [
-    "data_images = tf.keras.utils.image_dataset_from_directory('../../images')"
+    "data_images = tf.keras.utils.image_dataset_from_directory('../images')"
    ]
   },
   {
@@ -326,7 +326,7 @@
    ],
    "source": [
     "# Definimos la ruta a los datos\n",
-    "data_directory = '../../images'\n",
+    "data_directory = '../images'\n",
     "\n",
     "# Configuramos el aumento de datos utilizando la API de preprocesamiento de Keras\n",
     "data_augmentation = tf.keras.Sequential([\n",
@@ -620,7 +620,7 @@
     "from matplotlib import pyplot as plt\n",
     "\n",
     "# Cargar la imagen usando OpenCV\n",
-    "img = cv2.imread('../../imagenes_prueba_real_madrid_prueba.png')\n",
+    "img = cv2.imread('../imagenes_prueba_real_madrid_prueba.png')\n",
     "\n",
     "# Verificar si la imagen fue cargada correctamente\n",
     "if img is None:\n",
